# PE_OrgAIR_CaseStudy4

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_api_key.py  test_job_signals_debug.py
app/: config.py  main.py
app/core/: deps.py
app/database/: schema_case_study_2.sql
app/exercises/: complete_pipeline.py
app/models/: signal.py
app/pipelines/: board_collector.py  glassdoor_collector.py  job_signals.py  leadership_signals.py  patent_signals.py  sec_edgar.py  sec_pipeline.py  tech_signals.py
app/routers/: analyst_notes.py  board.py  companies.py  culture.py  documents.py  evidence.py  health.py  justification.py  pipeline.py  search.py  signals.py
app/services/: s3_storage.py  snowflake.py
dags/: evidence_indexing_dag.py  org_air_scoring_dag.py
results/: DG_dimension_scores.json  DG_org_air_result.json  GE_dimension_scores.json  GE_org_air_result.json  JPM_dimension_scores.json  JPM_org_air_result.json  NVDA_dimension_scores.json  NVDA_org_air_result.json  WMT_dimension_scores.json  WMT_org_air_result.json
scripts/: index_evidence.py  inspect_chroma.py  run_digital_presence_collection.py  run_external_signals.py
src/scoring/: board_analyzer.py  config.py  evidence_mapper.py  integration_service.py  talent_concentration.py
src/services/collection/: analyst_notes.py
src/services/integration/: cs1_client.py  (+2 more)
streamlit_app/: api_client.py  app.py
tests/: test_board_collector.py  test_cs4_api.py  test_cs4_justification_generator.py  test_cs4_llm_router.py  test_evidence_mapper.py
(+6 files in other folders)
